src/components/RequestQuotePage/index.scss
@import "~@ergeon/core-components/src/components/variables.scss";

.request-quote-page {
  max-width: 100%;
  margin: 60px auto 0;
  @include phone() {
    margin: 30px auto 0;
  }

  .confirmation-email {
    display: flex;
    justify-content: center;
    font-size: $font-regular-size;
    font-weight: bold;
  }

  &__header-message {
    .title {
      font-family: $font-title;
      font-size: 30px;
      color: #333631;
      letter-spacing: 0;
      line-height: 40px;
      text-align: left;
      margin: 0 0 12px;
    }

    .subtitle {
      font-size: 14px;
      color: #787e75;
      letter-spacing: 0;
      text-align: left;
      line-height: 18px;
      max-width: 480px;
      margin-bottom: 30px;
    }
  }

  .lead-area {
    max-width: 980px;
    margin: 0 auto;
    flex-direction: column;
    @include tablet() {
      padding-left: $h-20;
      padding-right: $h-20;
    }
    &__flex-wrapper {
      display: flex;
      justify-content: space-between;
      @include phone() {
        display: block;
      }
    }
    &__mobile-address {
      border: 1px solid rgba($gray-3, 0.55);
      margin-bottom: $v-24;
      display: none;
      background-color: $gray-6;
      border-radius: $corner-default;
      @include phone() {
        margin-bottom: $v-12;
        display: block;
      }
      &__field {
        display: flex;
        justify-content: space-between;
        align-items: center;
        padding: $v-6 $v-12 $v-6 $h-10;
        font-size: $font-mobile-size;
        height: $v-48;
        .label {
          font-size: $font-mobile-size;
          transform: translate(-13px, 0) scale(0.75);
        }
      }
    }
  }

  &__lead-form {
    background: #fff;
    border: 1px solid #e4e9e2;
    border-radius: 12px;
    max-width: 500px;
    padding: 60px;
    width: 100%;
    @include tablet() {
      padding: $h-40;
    }
    @include phone() {
      padding: 0;
      border: none;
      z-index: 1;
      max-width: none;
      width: 100%;
    }
  }

  &__signup-map {
    margin-left: 40px;
    max-width: 500px;
    height: 100%;
    width: 100%;
    hr {
      border: none;
      border-bottom: 1px solid #e4e9e2;
    }

    @include phone() {
     display: none;
    }
    &-wrapper {
      margin-top: 24px;
    }
  }

  a {
    cursor: pointer;
  }

  .AddressContainer {
    display: flex;
    justify-content: space-between;
    align-items: center;

    .Address {

      .AddressStreet {
        font: $font-title;
        font-size: $h6-size;
        font-weight: bold;
      }

      .AddressCity {
        font: $font-content;
        font-size: $font-label-size;
        line-height: 18px;
        color: $gray-2;
      }
    }

    .EditButton {
      width: 80px;
    }
  }
}

